grafana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-doodle-grafana
  labels:
    app: super-doodle-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: super-doodle-grafana
  template:
    metadata:
      labels:
        app: super-doodle-grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: super-doodle-grafana
spec:
  selector:
    app: super-doodle-grafana
  ports:
    - port: 3000
