ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: super-doodle
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: super-doodle-prometheus
                port:
                  number: 9090
